[package]
name = "bevy_hackernews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bevy = { git = "https://github.com/bevyengine/bevy" }
futures-lite = "1.12.0"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
ureq = { version = "2.5.0", features = ["json"] }
